--- a/project/templates/axf/market.html
+++ b/project/templates/axf/market.html
@@ -71,8 +71,12 @@
 
                 <section>
                     <button ga="{{item.productid}}" class="subShopping">-</button>
-                    <span id="{{item.productid}}">0</span>
-                    <button ga="{{item.productid}}" class="addShopping">+</button>
+                    {%for c in cartList%}
+                        {%if c.productid==item.productid%}
+                            <span id="{{item.productid}}">{{c.productnum}}</span>
+                        {%endif%}}
+                    {%endfor%}
+                    <button ga="{{item.productid}}" class="addShopping">+</button>  <!--自定义ga为了获取id使用，不同产品相同操作-->
                 </section>
             </li>
             {%endfor%}
