完成购物车开发，马上进入订单‘ git commit -m 完成购物车开发，马上进入订单‘

--- a/project/templates/axf/base.html
+++ b/project/templates/axf/base.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 {% load static from staticfiles %}
 <html lang="en">
 <head>
@@ -31,6 +30,8 @@
     <script type="text/javascript" charset="utf-8" src="{%static 'axf/main/js/base.js'%}"></script>
     <script type="text/javascript" src="/static/axf/market/js/market.js"></script>
     <script type="text/javascript" src="/static/axf/mime/js/register.js"></script>
+    <script type="text/javascript" src="/static/axf/cart/js/cart.js"></script>
+
 
     <style type="text/css">
         .swiper-container {
