完成购物车商品取消选择功能

--- a/project/templates/axf/cart.html
+++ b/project/templates/axf/cart.html
@@ -70,8 +70,8 @@
                         √
                         {%endif%}
                     </span></span></div>
-                        <p><span>全选</span><span>共计：</span><span>总价：</span></p>
-                        <a>选好了</a>
+                        <p style="display: inline-block"><span>O 全选</span><span>共计：</span><span>总价：</span></p>
+                        <a style="display: inline-block">选好了</a>
                     </li>
                 </ul>
             </menu>
