添加了一点订单内容和一个test网页，测试自适应功能

--- a/project/templates/axf/mime.html
+++ b/project/templates/axf/mime.html
@@ -21,7 +21,7 @@
 
     <section class="mime">
         <p>
-            <span>我的订单</span><a>查看全部订单</a>
+            <span>我的订单</span><a href="/order/">查看全部订单</a>
         </p>
 
     </section>
